--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,14 @@
 # https://aka.ms/yaml
 
 trigger:
-- main
+  branches:
+    include:
+    - main
+
+pr:
+  branches:
+    include:
+    - '*'
 
 pool:
   vmImage: ubuntu-latest
@@ -17,3 +24,16 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+
+- script: echo Compiling the code...
+  displayName: 'Build'
+
+- script: echo Running unit tests...
+  displayName: 'Run Unit Tests'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    pathtoPublish: '$(Build.SourcesDirectory)/<path_to_artifact>'
+    artifactName: 'buildArtifact'
+    publishLocation: 'container'
+  displayName: 'Publish Build Artifact'
